--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,11 @@
 <html lang="en" data-theme="cupcake">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/png+" href="/icon5.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Fitmaster</title>
   </head>
   <body>
     <div id="root"></div>
